// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MoneyInput component renders correctly 1`] = `
<div
  class="flex"
>
  <div
    class="relative"
  >
    <input
      class="tool-field w-full ml-0 h-auto focus:outline-none focus:shadow-focus-outline peer border-gray-400 border py-[8px] pl-[43px] rounded focus:border-blue-700"
      data-testid="number-input"
      id="test-id"
      inputmode="numeric"
      name="test-name"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="absolute bg-gray-100 top-0 left-0 py-2 px-3 rounded-l border-gray-400 border border-solid leading-[31px] text-[18px] h-full peer-focus:border-blue-700 peer-focus:border-r-gray-400"
    >
      £
    </span>
  </div>
</div>
`;

exports[`MoneyInput component renders correctly with addon 1`] = `
<div
  class="flex"
>
  <div
    class="relative"
  >
    <input
      class="tool-field w-full ml-0 h-auto focus:outline-none focus:shadow-focus-outline peer border-gray-400 border py-[8px] pl-[43px] rounded focus:border-blue-700 pr-12"
      data-testid="number-input"
      id="test-id"
      inputmode="numeric"
      name="test-name"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="absolute bg-gray-100 top-0 left-0 py-2 px-3 rounded-l border-gray-400 border border-solid leading-[31px] text-[18px] h-full peer-focus:border-blue-700 peer-focus:border-r-gray-400"
    >
      £
    </span>
    <span
      aria-hidden="true"
      class="absolute top-0 right-0 px-3 py-2 bg-gray-100 border border-gray-400 border-solid rounded-r text-nowrap h-full text-[18px] peer-focus:border-blue-700 peer-focus:border-l-gray-400"
    >
      £
    </span>
  </div>
</div>
`;
